--- a/docs/source/files/assignments/06.rst
+++ b/docs/source/files/assignments/06.rst
@@ -6,29 +6,70 @@ All project authors contributed to this assignment in equal parts.
 Task 6.1 - 2010 M 8.8 Chile Event
 =====================================
 
-Task 6.1.1 - Visualization off input
+Task 6.1.1 - Visualization of input
 -------------------------------------------
 
-We rescaled the interval to -2 and 2.
 
 ..  image:: ../../_static/assets/task_6-1-1_chile_dis.png
-    
+
+scaling interval[-2,2].
+
+..  image:: ../../_static/assets/task_6-1-1_chile_bath.png
+
+scaling interval[-10000,10000].
 
    
+Task 6.1.2 - Simulations
+-------------------------------------------
+
+.. raw:: html
+
+    <video width="100%" height="auto" controls>
+      <source src="../../_static/assets/task_6-2-1_tohoku_1000.mp4" type="video/mp4">
+    </video> 
 
 
+At 6000 seconds the computational domain is left.
 
 Task 6.2 - 2011 M 9.1 Tohoku Event
 =====================================
 
-Task 6.2.1 - Visualization off input
+Task 6.2.1 - Visualization of input
 -------------------------------------------
-
-We rescaled the interval to -2 and 2.
 
 ..  image:: ../../_static/assets/task_6-2-1_tohoku_dis.png
 
+scaling interval[-2,2].
 
-For the scaling we used the interval[-10000,10000].
 
 ..  image:: ../../_static/assets/task_6-2-1_tohoku_bath.png
+
+scaling interval[-10000,10000].
+
+
+Task 6.2.2 - Simulations
+-------------------------------------------
+
+`Tohoku 1000` 
+
+.. raw:: html
+
+    <video width="100%" height="auto" controls>
+      <source src="../../_static/assets/task_6-2-1_tohoku_1000.mp4" type="video/mp4">
+    </video> 
+
+grid size: 1000
+Leaves the top domain at 2900 seconds. Computational demant:
+Per time step we update 4050000 cells.
+
+
+`Tohoku 5000`
+
+.. raw:: html
+
+    <video width="100%" height="auto" controls>
+      <source src="../../_static/assets/task_6-2-1_tohoku_1000.mp4" type="video/mp4">
+    </video> 
+
+grid size: 5000
+Computational demant: Per time step we update 4050000 cells.
