--- a/docs/source/files/assignments/06.rst
+++ b/docs/source/files/assignments/06.rst
@@ -22,14 +22,26 @@ scaling interval[-10000,10000].
 Task 6.1.2 - Simulations
 -------------------------------------------
 
+`Chile 1000` 
+
 .. raw:: html
 
     <video width="100%" height="auto" controls>
-      <source src="../../_static/assets/task_6-2-1_tohoku_1000.mp4" type="video/mp4">
+      <source src="../../_static/assets/task_6-1-1_chile_1000.mp4" type="video/mp4">
     </video> 
 
+grid size: 1000
 
-At 6000 seconds the computational domain is left.
+`Chile 5000` 
+
+.. raw:: html
+
+    <video width="100%" height="auto" controls>
+      <source src="../../_static/assets/task_6-1-1_chile_5000.mp4" type="video/mp4">
+    </video> 
+
+grid size: 5000
+
 
 Task 6.2 - 2011 M 9.1 Tohoku Event
 =====================================
@@ -46,9 +58,7 @@ scaling interval[-2,2].
 
 scaling interval[-10000,10000].
 
-
-Task 6.2.2 - Simulations
--------------------------------------------
+**Simulations**
 
 `Tohoku 1000` 
 
@@ -59,8 +69,8 @@ Task 6.2.2 - Simulations
     </video> 
 
 grid size: 1000
-Leaves the top domain at 2900 seconds. Computational demant:
-Per time step we update 4050000 cells.
+Leaves the top domain at 2900 seconds. 
+Computational demant: per timestep we update 4050000 cells.
 
 
 `Tohoku 5000`
@@ -68,8 +78,18 @@ Per time step we update 4050000 cells.
 .. raw:: html
 
     <video width="100%" height="auto" controls>
-      <source src="../../_static/assets/task_6-2-1_tohoku_1000.mp4" type="video/mp4">
+      <source src="../../_static/assets/task_6-2-1_tohoku_5000.mp4" type="video/mp4">
     </video> 
 
 grid size: 5000
-Computational demant: Per time step we update 4050000 cells.
+Computational demant: per timestep we update 4050000 cells.
+
+
+Task 6.2.2 - Soma
+-------------------------------------------
+
+The initial water height is -0.7  meters.
+It steadily decreases and reaches its minimum at 2620 seconds at -2.1 meters.
+The water level starts rising and at 3320 surpasses 0 meters and thus the wave reaches Soma.
+The wave reaches Soma after 55 minutes.
+It then steadily rises and reacehs its maximum at 3870 seconds with 4.45 meters. 
