--- a/docs/source/files/assignments/08.rst
+++ b/docs/source/files/assignments/08.rst
@@ -37,6 +37,67 @@ Sbatch:
 
 Since we only want to use one node, we set ``nodes`` and ``ntasks`` to 1 and ``cpus-per-task`` to 72.
 
+8.1.3 - Private PC vs ARA
+---------------------------
+
+.. note:: 
+
+  The code was compiled using ``scons mode=benchmark opt=-O2``.
+
+
+  The benchmarking mode disables all file output.
+
+  
+  The private PC uses an UbuntuVM.
+
+..  list-table:: execution times on different devices
+    :header-rows: 1
+
+    * - Device
+      - Config
+      - Setup time
+      - Computation loop time
+      - Total execution time
+    * - private
+      - chile5000.json
+      - 5.56396s
+      - 31.6052s
+      - 41.3911s
+    * - ARA
+      - chile5000.json
+      - 5.06402s
+      - 31.6528s
+      - 42.7966s
+    * - private
+      - chile1000.json
+      - x
+      - x
+      - x
+    * - ARA
+      - chile1000.json
+      - x
+      - x
+      - x
+    * - private
+      - tohoku5000.json
+      - x
+      - x
+      - x
+    * - ARA
+      - tohoku5000.json
+      - x
+      - x
+      - x
+    * - private
+      - tohoku1000.json
+      - x
+      - x
+      - x
+    * - ARA
+      - tohoku1000.json
+      - x
+      - x
+      - x
 
 8.2 Compilers
 ===============
