--- a/docs/source/files/assignments/08.rst
+++ b/docs/source/files/assignments/08.rst
@@ -36,6 +36,42 @@ sbatch file:
 
 Since we only want to use one node, we set ``nodes`` and ``ntasks`` to 1 and ``cpus-per-task`` to 72.
 
+8.1.2 Visualization
+--------------------------
+
+**Tohoku 5000**
+
+.. raw:: html
+
+    <video width="100%" height="auto" controls>
+      <source src="../../_static/assets/task_8-1-2_tohoku_5000.mp4" type="video/mp4">
+    </video> 
+
+
+**Tohoku 5000**
+
+.. raw:: html
+
+    <video width="100%" height="auto" controls>
+      <source src="../../_static/assets/task_8-1-2_tohoku_1000.mp4" type="video/mp4">
+    </video> 
+
+
+
+**Chile 5000**
+
+.. raw:: html
+
+    <video width="100%" height="auto" controls>
+      <source src="../../_static/assets/task_8-1-2_chile_5000.mp4" type="video/mp4">
+    </video> 
+
+TODO add Chile_1000
+
+
+
+Comparing to the simulations from assignment 6, it is clear that all simulations behave equally.
+
 8.1.3 - Private PC vs ARA
 ---------------------------
 
